fix overflow issue

--- a/assets/text.css
+++ b/assets/text.css
@@ -42,6 +42,7 @@ pre {
     font-family: Roboto Mono;
     padding: 0.75em;
     border-radius: 3px;
+    overflow-x: scroll;
 }
 
 table {
